# credit_card_fraud

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
app/: api.py  dashboard.py
notebooks/: EDA.ipynb  download_data.py
src/: data_preprocessing.py  model_training.py
