[project]
name = "credit-card-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "joblib>=1.5.2",
    "jupyterlab>=4.4.6",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "matplotlib-inline>=0.1.7",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.4",
]
